feat(auth): hide expired UserPosition grants from client-config (#265)
* fix(template): compile map-image tests after system-variable Clock

Squash #259 still called the one-arg SystemVariableResolver
constructor removed by #263. Record the export API in CHANGELOG
and apply Spotless to the landed sources.

* feat(auth): hide expired UserPosition grants from client-config

Client lists, profile, and roles now require a grant-territory
interval that covers today so expired cargos disappear without
gating login, /proxy, or admin CRUD.

Fixes #184

* refactor(user): name position interval locals after entity fields

createdDate and expirationDate replace alta/baja in checks and tests.